[package]
name = "panic-msp430"
version = "0.1.0"
authors = ["YuhanLiin <linyuhan0315@hotmail.com>"]
keywords = ["panic-handler", "panic", "msp430"]
license = "MIT OR Apache-2.0"
description = "Halting panic implementation for MSP430 microcontrollers"
repository = "https://github.com/YuhanLiin/panic-msp430"
documentation = "https://docs.rs/panic-msp430"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msp430 = "0.1.0"
